<resources>
    <string name="app_name">TravelGuideApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_username_text">Enter the User Name</string>
    <string name="enter_the_email_text">Enter the email</string>
    <string name="enter_the_password_text">Enter the password</string>

    <string name="have_an_account_text"><![CDATA[Do you have an account ? <font color=#F84D4D>Login</font>]]></string>
    <string name="register_text">Register</string>
    <string name="registration_text">Registration</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Forgot password ?</string>
    <string name="create_account_text"><![CDATA[You have not an account ? <font color=#F84D4D>Create Account</font>]]></string>
    <string name="reset_password_text">Reset Password</string>
    <string name="send_text">Send</string>
    <string name="reset_password_description">Please enter your email and wait a minute. Check your inbox. If email doesn\'t show then check spam box</string>
    <string name="flight_text">Flight</string>
    <string name="explore_destination_text">Explore Destination</string>
    <string name="car_text">Car</string>
    <string name="hotel_text">Hotel</string>
    <string name="train_text">Train</string>
    <string name="search_flight_text">Search flight</string>
    <string name="passenger_text">Passenger</string>
    <string name="return_text">Return</string>
    <string name="departure_text">Departure</string>
    <string name="destination_text">Destination</string>
    <string name="location_text">Location</string>
    <string name="result_text">Result</string>
    <string name="hotel_not_founded_text">Hotel not founded!</string>
    <string name="view_details_text">view details</string>
    <string name="search_train_text">Search train</string>

</resources>