<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragment.register.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:scaleType="fitEnd"
        android:src="@drawable/rectangle_top_rounded_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/forgotPasswordAnimation"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/forgot_password" />

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lobster"
        android:text="@string/reset_password_text"
        android:textAlignment="center"
        android:textColor="@color/app_main_color_dark2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordAnimation" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputForgotPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/app_main_color_dark"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTitle">

        <EditText
            android:id="@+id/emailInputTextForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_background"
            android:hint="@string/enter_the_email_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textForgotPasswordDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textAlignment="center"
        android:text="@string/reset_password_description"
        app:layout_constraintTop_toBottomOf="@id/emailInputForgotPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPasswordButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/send_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForgotPasswordDescription"
        />


</androidx.constraintlayout.widget.ConstraintLayout>