<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.register.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:src="@drawable/rectangle_top_rounded_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/registerAnimation"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/register" />

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lobster"
        android:text="@string/registration_text"
        android:textAlignment="center"
        android:textColor="@color/app_main_color_dark2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAnimation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/app_main_color_dark"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTitle">

        <EditText
            android:id="@+id/userNameInputTextRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_background"
            android:hint="@string/enter_the_username_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/app_main_color_dark"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputRegisterLayout">

        <EditText
            android:id="@+id/emailInputTextRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_background"
            android:hint="@string/enter_the_email_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/app_main_color_dark"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputRegisterLayout">

        <EditText
            android:id="@+id/passwordInputTextRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input_background"
            android:hint="@string/enter_the_password_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/passwordVisibile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        android:src="@drawable/visibility"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/passwordInputRegisterLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordInputRegisterLayout"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="@id/passwordInputRegisterLayout"
        app:layout_constraintTop_toTopOf="@id/passwordInputRegisterLayout"
        app:layout_constraintVertical_bias="0.48" />

    <ImageView
        android:id="@+id/passwordVisibileOff"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        android:src="@drawable/visibility_off"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/passwordInputRegisterLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordInputRegisterLayout"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="@id/passwordInputRegisterLayout"
        app:layout_constraintTop_toTopOf="@id/passwordInputRegisterLayout"
        app:layout_constraintVertical_bias="0.48" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/register_text"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputRegisterLayout"
        />
    
    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/have_an_account_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>