<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="trainFragment"
            type="com.natiqhaciyef.travelguideapp.ui.view.fragment.trainscreen.TrainFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background_reversed"
        tools:context=".ui.view.fragment.trainscreen.TrainFragment">

        <ImageView
            android:id="@+id/halfWorld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:rotation="180"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/half_world"
            />


        <ImageView
            android:id="@+id/trainBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitEnd"
            android:src="@drawable/train_background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/location_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/trainBackgroundImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/locationTextTrain"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_flight_input_bar"
            android:backgroundTint="@color/app_main_color_light_extra_part2"
            android:hint="Your location"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTitle"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/destinationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/destination_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTextTrain" />

        <EditText
            android:id="@+id/destinationTextTrain"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_flight_input_bar"
            android:backgroundTint="@color/app_main_color_light_extra_part2"
            android:hint="Your destination"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destinationTitle"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/passengerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/passenger_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destinationTextTrain" />

        <EditText
            android:id="@+id/passengerTextTrain"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_flight_input_bar"
            android:backgroundTint="@color/app_main_color_light_extra_part2"
            android:hint="1 Passenger"
            android:inputType="number"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passengerTitle"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchTrainButton"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_flight_button_bar"
            android:text="@string/search_train_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passengerTextTrain"
            app:layout_constraintVertical_bias="0.529" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>